Fixed text wrap on long names

--- a/src/app/widgets/JobStatus/components/IdleInfo.styl
+++ b/src/app/widgets/JobStatus/components/IdleInfo.styl
@@ -96,3 +96,11 @@
     color: #6b7280;
     text-align: center;
 }
+
+.text-wrap {
+    overflow: hidden;
+    white-space:nowrap
+    text-overflow: ellipsis;
+    max-width: 200px;
+    display: block;
+}
